--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "src/app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js"
   },
@@ -10,7 +10,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "redis": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
