--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ x-exec-settings: &exec-settings
 services:
   frontend:
     build: 
-      context: ./client
+      context: client
       dockerfile: ../builds/frontend/Dockerfile # 以 context 的值來指定 dockerfile 的相對路徑. 而 dockerfile 內則以 context 為基礎路徑進行配置
     container_name: frontend
-    env_file: ./.env
+    env_file: .env
     ports:
       - ${FRONTEND_PORT}:${FRONTEND_PORT}
     volumes:
@@ -29,10 +29,10 @@ services:
   
   backend:
     build:
-      context: ./server
+      context: server
       dockerfile: ../builds/backend/Dockerfile # 以 context 的值來指定 dockerfile 的相對路徑. 而 dockerfile 內則以 context 為基礎路徑進行配置
     container_name: backend
-    env_file: ./.env
+    env_file: .env
     ports:
       - ${BACKEND_PORT}:${BACKEND_PORT}
     volumes:
@@ -52,9 +52,11 @@ services:
   mysql:
     image: mysql
     container_name: mysql
-    env_file: ./.env
+    env_file: .env
     ports:
       - ${MYSQL_PORT}:${MYSQL_PORT}
+    volumes:
+      - ./builds/backend/mysql.cnf:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       <<: *database-env
@@ -62,13 +64,13 @@ services:
       - backend
     restart: unless-stopped
     # TODO: Should fixed this warning, use authentication_policy instead? 
-    command: --default-authentication-plugin=mysql_native_password
+    # command: --default-authentication-plugin=mysql_native_password
     <<: *exec-settings
   
   redis:
     image: redis:alpine
     container_name: redis
-    env_file: ./.env
+    env_file: .env
     ports:
       - ${REDIS_PORT}:${REDIS_PORT}
     networks:
