--- a/.env.template
+++ b/.env.template
@@ -3,9 +3,9 @@ FRONTEND_PORT=3000
 
 # backend
 BACKEND_PORT=8000
-MYSQL_HOST: mysql
 
 # mysql database
+MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
