--- a/.env.template
+++ b/.env.template
@@ -12,5 +12,14 @@ MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
-# redis
-REDIS_PORT=6379
+# redis cluster
+REDIS_CONTAINER_PORT=6379
+
+# redis node1
+REDIS_PORT1=7001
+
+# redis node2
+REDIS_PORT2=7002
+
+# redis node3
+REDIS_PORT3=7003
