--- a/client/docker/docker-compose.yml
+++ b/client/docker/docker-compose.yml
@@ -1,23 +1,29 @@
 version: "3.8"
 
-x-exec-settings: &exec-settings
+x-shared-settings: &shared-settings
+  restart: unless-stopped
   stdin_open: true
   tty: true
 
+# - `build.context`
+#   - '..' 代表以 client folder 作為 context
+# - `build.dockerfile`
+#   - 以 context 的值來指定 dockerfile 的相對路徑，而 dockerfile 內則以 context 為基礎路徑進行配置
+# - `networks`
+#   - 在 docker-compose.network 預計要先被啟動，不然會報錯。
 services:
   frontend:
     build:
-      context: ../.. # 以 client folder 作為 context
-      dockerfile: ./docker/Dockerfile # 以 context 的值來指定 dockerfile 的相對路徑. 而 dockerfile 內則以 context 為基礎路徑進行配置
+      context: ..
+      dockerfile: ./docker/Dockerfile
     container_name: frontend
     env_file: .env
     ports:
       - ${FRONTEND_PORT}:${FRONTEND_PORT}
     volumes:
-      - ../..:/app/client
-    networks: # 在 docker-compose.network 預計要先被啟動，不然會報錯
+      - ..:/app/client
+    networks:
       - frontend
     depends_on:
       - backend # 在 server folder，預計要先被啟動，不然 frontend 會報錯
-    restart: unless-stopped
-    <<: *exec-settings
+    <<: *shared-settings
