feat: redis dockerfile

--- a/server/docker/redis/Dockerfile
+++ b/server/docker/redis/Dockerfile
@@ -2,8 +2,7 @@ FROM redis:alpine
 
 VOLUME ./dockers/redis/data/node1:/data
 
-CMD ["sh", "-c", "redis-server /usr/local/etc/redis/redis.conf \
+CMD ["sh", "-c", "redis-server \
   --cluster-enabled yes \
-  --cluster-config-file nodes.conf \
   --cluster-node-timeout 5000 \
   --appendonly yes"]
