--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,16 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon --env-file .env src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "multer": "^1.4.5-lts.1",
+    "express": "^5.1.0",
+    "multer": "1.4.5-lts.2",
     "mysql": "^2.18.1",
-    "redis": "^4.2.0"
+    "redis": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^3.1.10"
   }
 }
