--- a/server/docker/redis/Dockerfile
+++ b/server/docker/redis/Dockerfile
@@ -1,8 +1,9 @@
-FROM redis:alpine
+FROM "$REDIS_IMAGE"
 
-VOLUME ./dockers/redis/data/node1:/data
+# CMD ["sh", "-c", "redis-server \
+#   --cluster-enabled yes \
+#   --cluster-node-timeout 5000 \
+#   --appendonly yes"]
 
-CMD ["sh", "-c", "redis-server \
-  --cluster-enabled yes \
-  --cluster-node-timeout 5000 \
-  --appendonly yes"]
+
+CMD ["sh", "-c", "redis-server"]
