--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "1.4.5-lts.2",
-    "mysql": "^2.18.1",
+    "pg-promise": "^11.13.0",
     "redis": "^5.0.0"
   },
   "devDependencies": {
