--- a/server/docker/postgresql/Dockerfile
+++ b/server/docker/postgresql/Dockerfile
@@ -3,6 +3,7 @@ ARG POSTGRES_IMAGE
 FROM alpine:3.20.3 as prep
 WORKDIR /prep
 COPY ./migrations ./migrations
+# TODO: env load?
 RUN envsubst \
   <./migrations/postgresql/users-and-permissions.template \
   >./migrations/postgresql/users-and-permissions.sql
