feat: application connect postgresql

--- a/server/.env.template
+++ b/server/.env.template
@@ -7,8 +7,7 @@ BACKEND_PORT=x
 POSTGRES_IMAGE=x
 POSTGRES_DB=x
 POSTGRES_HOST=x
-POSTGRES_CONTAINER_PORT=x
-POSTGRES_PORT=x
+PGPORT=x
 POSTGRES_USER=x
 POSTGRES_PASSWORD=x
 # Postgresql Users
