--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - $BACKEND_PORT:$BACKEND_PORT
     volumes:
-      - ./server/src:/app/server/src
+      - ./server/src:/app/src
     depends_on:
       - postgres
       - redis-node1
