--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM node:lts
 WORKDIR /app
 
 # P.S. 以 docker-compose 定義的 context 路徑來複製檔案
-COPY ./package.json ./
+COPY ./package.json ./pnpm-lock.yaml* .npmrc* ./
 
 RUN corepack enable pnpm && pnpm i --frozen-lockfile
 
