feat: reorg networks

--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     networks:
       - frontend
       - backend
+      - db
+      - redis
     ports:
       - $BACKEND_PORT:$BACKEND_PORT
     volumes:
