--- a/server/docker/postgresql/docker-compose.yml
+++ b/server/docker/postgresql/docker-compose.yml
@@ -1,15 +1,39 @@
 version: "3.9"
 
+x-shared-settings: &shared-settings
+  env_file: ./server/.env
+  restart: on-failure:10
+  stdin_open: true
+  tty: true
+  networks: [db]
+
 services:
+  # # === etcd cluster ===
+  # etcd1: &etcd
+  #   <<: *shared-settings
+  #   image: quay.io/coreos/etcd:v3.5.5
+  #   container_name: etcd1
+  #   env_file: ./server/docker/postgresql/etcd/.etcd1.env
+  #   healthcheck:
+  #     test: ["CMD", "etcdctl", "endpoint", "health"]
+  #     start_period: 10s
+  #     interval: 15s
+  #     retries: 5
+  #
+  # etcd2:
+  #   <<: *etcd
+  #   container_name: etcd2
+  #   env_file: ./server/docker/postgresql/etcd/.etcd2.env
+  #
+  # etcd3:
+  #   <<: *etcd
+  #   container_name: etcd3
+  #   env_file: ./server/docker/postgresql/etcd/.etcd3.env
+
   postgres:
+    <<: *shared-settings
     container_name: $POSTGRES_HOST
     image: $POSTGRES_IMAGE
-    env_file: ./server/.env
-    restart: on-failure:10
-    stdin_open: true
-    tty: true
-    networks:
-      - backend
     volumes:
       - ./server/docker/postgresql/data:/var/lib/postgresql/data
       - ./server/migrations/postgresql:/docker-entrypoint-initdb.d
